# whos-there

./: .copier-answers.yml  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AZURE_ANALYSIS.md  CODE_OF_CONDUCT.md  CONDA_FORGE_README.md  CONDA_FORGE_UPGRADE_GUIDE.md  LICENSE  README.md  SECURITY.md  conda-forge-meta-alternative.yaml  conda-forge-meta.yaml  google-notypes.mustache  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yaml  release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_feature_request.yaml  3_refactor.yaml  4_documentation.yaml  bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: build.yaml  build.yml  codeql.yml  copier-delete-branch.yaml  copier.yaml  docs.yaml  greetings.yml  pre-commit.yaml  release-drafter.yaml  release-drafter.yml  release.yaml  release.yml
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/notebooks/: index.md  the-boring-model.ipynb
docs/docs/styles/: extra.css
docs/notebooks/: index.md  intro_notebook.ipynb
examples/: the-boring-model.py  the_boring_model.ipynb  the_boring_model.py
src/whos_there/: __about__.py  __init__.py  callback.py  cli.py
src/whos_there/senders/: __init__.py  base.py  debug.py  discord.py  email.py  slack.py  teams.py  telegram.py
src/whos_there/utils/: logging.py
tests/: test_dry_run.py  test_pickle.py  test_whos_there.py
tests/unit/: test_base.py  test_dry_run.py  test_pickle.py
whos_there/: __init__.py  callback.py
whos_there/senders/: base.py  debug.py  discord.py  email.py  slack.py  teams.py  telegram.py
whos_there/utils/: logging.py
